--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "rutube-dl",
+	"name": "rutube-downloader",
 	"description": "Скачивание видео с RuTube",
 	"version": "1.0.0",
 	"main": "index.js",
@@ -14,8 +14,11 @@
 	],
 	"license": "MIT",
 	"dependencies": {
-		"m3u8-parser": "^7.1.0",
-		"node-fetch": "^2.6.1",
-		"split-file": "^2.3.0"
+		"ansi-colors": "4.1.3",
+		"cli-progress": "3.12.0",
+		"m3u8-parser": "7.1.0",
+		"node-fetch": "2.6.1",
+		"sanitize-filename": "1.6.3",
+		"split-file": "2.3.0"
 	}
 }
