--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: Build and publish
 on:
   push:
+    branches: [ "main" ]
     tags:
       - "*"
 jobs:
@@ -29,6 +30,6 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: rutube-downloader.zip
-          tag: ${{ github.ref_name }}
+          tag: 1.0.0
           overwrite: true
           file_glob: true
