--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           npm i
           npm i --save-dev archiver
+          node packager.js
           node archiver.js
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
