--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 /rutube-dl.sublime-workspace export-ignore
 /screen.png export-ignore
 /archiver.js export-ignore
+/packager.js export-ignore
 /*.zip export-ignore
 /*.inf export-ignore
 /*.ini export-ignore
